Add new CSS file and update colors

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -131,22 +131,22 @@
                 <ul>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-invoice",  "title":"Colilla de pagos", "image":"tmp_servicio.png", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
+                    locals='{ "link":"#", "ico": "file-invoice",  "title":"Colilla de pagos", "image":"tmp_servicio.png", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
                   ></include>
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-lines",  "title":"Certificado de Pensión", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Certificado de Pensión", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-invoice-dollar",  "title":"Copia de poliza", "image":"tmp_servicio.png", "content":"Documento que ilustra los componentes de tu póliza de Renta Vitalicia, tus deberes y derechos como cliente y nuestras obligaciones y derechos como Aseguradora de Vida."}'
+                    locals='{ "link":"#", "ico": "file-invoice-dollar",  "title":"Copia de poliza", "image":"tmp_servicio.png", "content":"Documento que ilustra los componentes de tu póliza de Renta Vitalicia, tus deberes y derechos como cliente y nuestras obligaciones y derechos como Aseguradora de Vida."}'
                   ></include>
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "money-check-pen",  "title":"Certificado de Ingresos y Retenciones", "image":"tmp_servicio.png", "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
+                    locals='{ "link":"#", "ico": "money-check-pen",  "title":"Certificado de Ingresos y Retenciones", "image":"tmp_servicio.png", "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
                   ></include>
                 </ul>
               </div>
@@ -154,12 +154,12 @@
                 <ul>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-invoice",  "title":"Actualización de documentos de identidad", "image":"tmp_servicio.png", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
+                    locals='{ "link":"#", "ico": "file-invoice",  "title":"Actualización de documentos de identidad", "image":"tmp_servicio.png", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
                   ></include>
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-lines",  "title":"Actualización de datos de contacto", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Actualización de datos de contacto", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                 </ul>
               </div>
@@ -167,32 +167,32 @@
                 <ul>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-invoice",  "title":"Redistribuciones de Mesada", "image":"tmp_servicio.png", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
+                    locals='{ "link":"#", "ico": "file-invoice",  "title":"Redistribuciones de Mesada", "image":"tmp_servicio.png", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
                   ></include>
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-lines",  "title":"Certificado de Estudio", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Certificado de Estudio", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-lines",  "title":"Certificado de supervivencia", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Certificado de supervivencia", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-lines",  "title":"Novedades de EPS", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Novedades de EPS", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-lines",  "title":"Novedades de Caja de Compensación", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Novedades de Caja de Compensación", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-lines",  "title":"Novedades de Cuenta Financiera", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Novedades de Cuenta Financiera", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-lines",  "title":"Novedades Pensión Voluntaria", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Novedades Pensión Voluntaria", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                 </ul>
               </div>
@@ -200,12 +200,12 @@
                 <ul>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-invoice",  "title":"Consultas PQRS", "image":"tmp_servicio.png", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
+                    locals='{ "link":"/PORTAL/pqrs_1_crear.html", "ico": "file-invoice",  "title":"Consultas PQRS", "image":"tmp_servicio.png", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
                   ></include>
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "ico": "file-lines",  "title":"Consulta Novedades", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+                    locals='{ "link":"#", "ico": "file-lines",  "title":"Consulta Novedades", "image":"tmp_servicio.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                 </ul>
               </div>
