Update content in pqrs_1_crear.html

--- a/src/pages/PORTAL/pqrs_1_crear.html
+++ b/src/pages/PORTAL/pqrs_1_crear.html
@@ -31,7 +31,7 @@
   <block name="content">
     <include
       src="PORTAL/p_top.html"
-      locals='{ "cls":"", "ico": "comments-question-check",  "title":"Solicitudes y PQRS", "image":"tmp_header.png", "content":"In commodo irure ad duis nisi esse nostrud veniam mollit minim culpa ipsum laborum. Laboris in officia irure duis irure aliqua do magna aliqua consectetur. Adipisicing occaecat qui ut voluptate ut Lorem in culpa est."}'
+      locals='{ "cls":"", "ico": "comments-question-check",  "title":"Solicitudes y PQRS", "image":"tmp_header.png", "content":"En ASULADO valoramos tu opinión y estamos comprometidos con la mejora continua. Por eso, hemos creado este espacio especialmente para ti, donde puedes diligenciar tus PQRS de forma rápida y sencilla."}'
     ></include>
 
     <div id="servicios" class="as__section pa__options">
