Update pqrs_1_crear.html and portal.css

--- a/src/pages/PORTAL/pqrs_1_crear.html
+++ b/src/pages/PORTAL/pqrs_1_crear.html
@@ -40,7 +40,7 @@
           <ul>
             <include
               src="PORTAL/p_link_servicio.html"
-              locals='{ "cls":"active", "ico": "money-check-dollar-pen",  "title":"Crear una solicitud", "content":"¡Tus inquietudes son importantes! Inicia tu solicitud ahora de forma rápida y sencilla."}'
+              locals='{ "cls":"active", "ico": "money-check-dollar-pen",  "title":"Crear una solicitud", "content":"¡Tus inquietudes son importantes para nosotros! Inicia tu solicitud ahora."}'
             ></include>
 
             <include
@@ -104,13 +104,13 @@
               esta entidad.
             </p>
             <p>
-              En caso de no poder resolverla, el asesor de servicio escalará tu
+              De no poder resolverla, el asesor de servicio escalará tu
               caso al Equipo de Atención a Clientes quien evaluará dicha
               solicitud.
             </p>
             <p>
               La Aseguradora responderá las peticiones y solicitudes de los
-              consumidores financieros, de conformidad al artículo 14 de la Ley
+              consumidores financieros de conformidad al artículo 14 de la Ley
               1755 de 2015, dentro de los quince (15) días siguientes a su
               recepción. Sin embargo, si se tratara de peticiones de documentos
               o información, esta se resolverá dentro de los diez (10) días
