Update portal.css and pqrs_1_crear.html

--- a/src/pages/PORTAL/pqrs_1_crear.html
+++ b/src/pages/PORTAL/pqrs_1_crear.html
@@ -104,9 +104,8 @@
               esta entidad.
             </p>
             <p>
-              De no poder resolverla, el asesor de servicio escalará tu
-              caso al Equipo de Atención a Clientes quien evaluará dicha
-              solicitud.
+              De no poder resolverla, el asesor de servicio escalará tu caso al
+              Equipo de Atención a Clientes quien evaluará dicha solicitud.
             </p>
             <p>
               La Aseguradora responderá las peticiones y solicitudes de los
